--- a/views/individual_Robot.mustache
+++ b/views/individual_Robot.mustache
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Staff</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
-
 <body class="container">
-  <h1>Second page</h1>
-
+  {{ #robotdata }}
   <div class="alldata">
-    {{ #robotdata }}
-    <p>{{city}}, {{country}}</p>
-    <p> {{#job}}
-          {{ job }}
-          {{ /job }}
-          {{ ^job }}
-          <p class="available">Available for hire</p>
-          {{/job}}</p>
-      <p class="robotCompany">{{company}}</p>
-      <p class="robotEmail">{{email}}</p>
-      <p class="robotPhone">{{phone}}</p>
-    {{ /robotdata }}
+    <div class="topbar">
+      <img class="IndAvatar" src="{{avatar}}" alt="{{name}}"></a>
+      <div class="details">
+        <h1 class="Name">{{name}}</h1>
+        <div class="contact">
+
+          <div class="citywork">
+            <p>{{ #address.city }} {{ address.city }}, {{ /address.city }} {{ address.country }} | {{ #job }} {{ job }}, {{ company }} {{ /job }} {{ ^job }}
+              <h3>Available For Hire</h3> {{ /job }}</p>
+          </div>
+          <p>{{ email }} | {{ phone }}</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="history">
+      <table>
+        <tr>
+          <th>Education</th>
+          <td>
+            <p>{{ university }}</p>
+          </td>
+        </tr>
+        <tr>
+          <th>Skills</th>
+          <td>
+            <ul>
+              {{ #skills }}
+              <li>{{ . }}</li>
+              {{ /skills }}
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
-
+  {{ /robotdata }}
 </body>
-
 </html>
