--- a/views/robot_data.mustache
+++ b/views/robot_data.mustache
@@ -15,7 +15,7 @@
 <div class="main"
   <div class="wrapper">
 
-    <a href="http://localhost:3000/individual_Robot/{{name}}">
+    <a href="http://localhost:3000/{{username}}">
       <img class="Avatars" src="{{avatar}}" alt="{{name}}"></a>
     <h1 class="robotName">{{name}}</h1>
         {{ #job }}
